--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Kazi Ramisa Rifa"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Studied B.Sc. in CSE at North South University"
   location         : "Dhaka, Bangladesh"
   employer         :
   pubmed           : 
   googlescholar    : 
-  email            :
+  email            : "kazi.rifa@northsouth.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
