--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "@ramisarifa"
+  youtube          : "ramisarifa"
   wikipedia        :
 
 
