--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Kazi Ramisa Rifa"
-  avatar           : "profile.png"
-  bio              : "Studied B.Sc. in CSE at North South University"
+  avatar           : "profile.jpeg"
+  bio              : "B.Sc. in Computer Science and Engineering at North South University"
   location         : "Dhaka, Bangladesh"
   employer         :
   pubmed           : 
