--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  LinkedIn         : "ramisarifa"
+  Linkedin         : "ramisarifa"
   orcid            : 
   pinterest        :
   soundcloud       :
