--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Kazi Ramisa Rifa"
   avatar           : "profile.jpeg"
-  bio              : "B.Sc. in Computer Science and Engineering at North South University"
-  location         : "Dhaka, Bangladesh"
+  bio              : "Graduate Research Assistant at University of Kentucky"
+  location         : "Lexington, KY, USA"
   employer         :
   pubmed           : 
   googlescholar    : 
