--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Lexington, KY, USA"
   employer         :
   pubmed           : 
-  googlescholar    : 
+  googlescholar    : https://scholar.google.com/citations?user=nrEP6nQAAAAJ&hl=en
   email            : "kazi.rifa@northsouth.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
