--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Kazi Ramisa Rifa"
-  avatar           : "profile.jpeg"
+  avatar           : "Ramisa_Snow_PP.jpg"
   bio              : "Graduate Research Assistant at University of Kentucky"
   location         : "Lexington, KY, USA"
   employer         :
