--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,8 @@ main:
   - title: "Talks"
     url: /talks/    
     
+  - title: "Publications"
+    url: /publications/   
+    
   - title: "CV"
     url: /cv/
-    
