--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : https://scholar.google.com/citations?user=nrEP6nQAAAAJ&hl=en
-  email            : "kazi.rifa@northsouth.edu"
+  email            : "ramisa.rifa@uky.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
